// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextLink /> should allow as override 1`] = `
<a
  as="[object Object]"
  class="reset_cursorPointer__1oah0221 reset_a__1oah0229 TextLink_root__5ax1bk0"
  rel="noopener noreferrer"
>
  <span
    class="reset_inlineText__1oah0222 useBoxStyles_textAlign_left__3xgq1lfh useTextStyles_root__1xnpmd70 reset_inlineText__1oah0222 useTextStyles_colours_link__1xnpmd7e useTextStyles_fontWeight_semiBold__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 reset_inlineText__1oah0222 useBoxStyles_position_relative__3xgq1lfg useBoxStyles_pointerEvents_none__3xgq1lhs"
  >
    Test
  </span>
</a>
`;

exports[`<TextLink /> should match the snapshot 1`] = `
<a
  class="reset_cursorPointer__1oah0221 reset_a__1oah0229 TextLink_root__5ax1bk0"
  rel="noopener noreferrer"
>
  <span
    class="reset_inlineText__1oah0222 useBoxStyles_textAlign_left__3xgq1lfh useTextStyles_root__1xnpmd70 reset_inlineText__1oah0222 useTextStyles_colours_link__1xnpmd7e useTextStyles_fontWeight_semiBold__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 reset_inlineText__1oah0222 useBoxStyles_position_relative__3xgq1lfg useBoxStyles_pointerEvents_none__3xgq1lhs"
  />
</a>
`;
